# erkinney-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  TODO.md  pyproject.toml  reddit-answers.md  reddit-cover-letter.html  reddit-cover-letter.md  start_mac.command  start_windows.bat
.agents/initialize-repository/: SKILL.md
.gemini/: GEMINI.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: tests.yml
.tmp/: README.md
ARCHIVED/: 20251120T170008Z_prompt_issue-1_reddit-research-mcp-bundle.md
ARCHIVED/claude_workflow_backup/: CLAUDE.md
docs/: GEMINI.md  README.md
docs/ARCHIVED/: GEMINI.md  README.md
docs/reddit-application/: reddit-answers.md  reddit-cover-letter.md  reddit-support-followup.md
docs/references/: GEMINI.md  README.md
erkinney_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp-bundle-reddit-research/: .env.example  .gitignore  KEYCHAIN.md  LICENSE  README.md  install.sh  package-lock.json  package.json  start-with-keychain.sh  test-auth-debug.js
mcp-bundle-reddit-research/docs/: CLAUDE_SETUP.md
mcp-bundle-reddit-research/examples/: 01-search-single-medication.md  02-complete-workflow.md
mcp-bundle-reddit-research/scripts/: keychain-helper.js
mcp-bundle-reddit-research/src/: auth.js
mcp-bundle-reddit-research/tests/: anonymize.test.js  basic.test.js
mcp-reddit-research/: KEYCHAIN.md  README.md  index.js  package.json
mcp-reddit-research/resources/: medication-templates.json
src/client/: app.py
tests/: GEMINI.md
(+40 files in other folders)
