[project]
name = "erkinney-mcp"
version = "0.1.0"
description = "MCP research toolkit for pregnancy medication studies"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.9.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "duckdb>=1.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "benchmark: marks tests as benchmark tests",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"tools/**/*.py" = ["N999", "B007", "B904", "B905"]
".gemini/**/*.py" = ["N999", "B007", "B904", "B905"]
"tests/**/*.py" = ["N999"]

[tool.uv]
dev-dependencies = [
    "keyring>=24.0.0",
    "pre-commit>=4.5.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["specs*", "planning*", "docs*", "tests*", ".gemini*", ".agents*"]
